# forbit

./: .gitignore  BinIO.f90  BinIO.f90~~~  BinIO_func.f90  MANIFEST.in  Makefile  README.md  binio.f90  binio.h  dabin.f90  fileio.py  forbit.py  forbit.pyx  main.py  pypi_update.sh  pyproject.toml  sample.py  setup.py
benchmark/: read_test.py  write_test.py
benchmark/result/: read_benchmark_kind4_recl9000000_sparse3.txt  write_benchmark_kind4_recl9000000_sparse3.txt
cython/: Makefile  README.md  binio.f90  binio.h  compiler.py  forbit.pyx
f2py/: Makefile  README.md
src/: Makefile  binio.h  forbit.pyx
test/: get_info.py  read_binary.py  write_binary.py
v1/: sample.py
v2/: Makefile  binio.f90  forbit.c  forbit.pyx
