
[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "Cython>=0.29.21,<3.1",
    "numpy>=1.21.6,<1.22; python_version == '3.7'",
    "numpy>=1.21.6,<2; python_version == '3.8'",
    "numpy>=1.21.6,<2; python_version >= '3.9' and python_version < '3.11'",
    "numpy>=1.23.5,<2; python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.26.0,<2; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13' and python_version < '3.14'"
]
build-backend = "setuptools.build_meta"

[project]
name = "forbit"
version = "1.0.5"
description = "Lightweight direct-access binary I/O for NumPy arrays, based on Fortran and Cython"
readme = "README.md"
requires-python = ">=3.7,<3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Kosei Ohara" }
]
keywords = [
    "fortran",
    "numpy",
    "scientific-computing",
    "scientific-python",
    "hpc",
    "binary",
    "binary-io",
    "direct-access",
    "fortran-binary",
    "atmospheric-science",
    "ocean-science",
    "cfd",
    "legacy-code",
]
dependencies = [
    "numpy>=1.21.6,<1.22; python_version == '3.7'",
    "numpy>=1.21.6,<2; python_version == '3.8'",
    "numpy>=1.21.6,<2; python_version >= '3.9' and python_version < '3.11'",
    "numpy>=1.23.5,<2; python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.26.0,<2; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13' and python_version < '3.14'"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Repository = "https://github.com/koseiohara/forbit"




